Business logic hardened