@@ -6,14 +6,15 @@ import org.airlinereservationsystem.service.FlightService;
 import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.ModelAttribute;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestParam;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
-import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.airlinereservationsystem.util.DateUtils.addFormattedMaps;
@@ -29,39 +30,32 @@ public class PublicController {
 
 	@GetMapping({"/", "/home"})
 	public String home(Model model) {
-		List<Flight> flights = flightService.findAll();
+		List<Flight> flights = flightService.findAll().stream().limit(10).toList();
 		addFormattedMaps(model, flights);
 		model.addAttribute("flights", flights);
 		return "home";
 	}
 
-	@GetMapping({"/flight-list"})
-	public String flightList(Model model) {
-		List<Flight> flights = flightService.findAll();
-		addFormattedMaps(model, flights);
-		model.addAttribute("flights", flights);
-		return "flights";
-	}
+//	@GetMapping({"/flight-list"})
+//	public String flightList(Model model) {
+//		List<Flight> flights = flightService.findAll();
+//		addFormattedMaps(model, flights);
+//		model.addAttribute("flights", flights);
+//		return "flights";
+//	}
 
 	@ModelAttribute("airports")
 	public List<String> populateAirports() {
-		List<String> origins = flightService.originAirports();
-		List<String> destinations = flightService.destinationAirports();
-
-		return Stream.concat(origins == null ? Stream.empty() : origins.stream(), destinations == null ? Stream.empty() : destinations.stream()).filter(s -> s != null && !s.isBlank()).map(String::trim).distinct().sorted(Comparator.naturalOrder()).collect(Collectors.toList());
+		return Stream.concat(flightService.originAirports().stream(), flightService.destinationAirports().stream()).filter(s -> s != null && !s.isBlank()).map(String::trim).distinct().sorted().toList();
 	}
 
 	@GetMapping("/flights")
 	public String showFlights(@RequestParam(required = false) String origin, @RequestParam(required = false) String destination, @RequestParam(required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate date, HttpServletRequest request, Model model) {
 
-		List<Flight> flights;
-		if (date == null) {
-			flights = flightService.search(origin, destination, null, null);
-		} else {
-			LocalDateTime start = date.atStartOfDay();
-			LocalDateTime end = date.atTime(LocalTime.MAX);
-			flights = flightService.search(origin, destination, start, end);
-		}
+		LocalDateTime start = (date != null) ? date.atStartOfDay() : null;
+		LocalDateTime end = (date != null) ? date.atTime(LocalTime.MAX) : null;
+
+		List<Flight> flights = flightService.search(origin, destination, start, end);
 
 		addFormattedMaps(model, flights);
 		model.addAttribute("flights", flights);
@@ -69,8 +63,9 @@ public class PublicController {
 		model.addAttribute("destination", destination);
 		model.addAttribute("date", date);
 
-		if ("true".equalsIgnoreCase(request.getParameter("ajax"))) {
-			return "fragments/flights :: results";
+		if ("XMLHttpRequest".equals(request.getHeader("X-Requested-With"))) {
+			model.addAttribute("fragment", "results");
+			return "fragments/flights";
 		}
 
 		return "flights";
@@ -78,11 +73,11 @@ public class PublicController {
 
 	@GetMapping("/flight/{id}")
 	public String flightDetails(@PathVariable("id") Long id, Model model) {
-		Flight f = flightService.findById(id).orElse(null);
-		if (f == null) {
-			return "redirect:/flights";
-		}
-		model.addAttribute("flight", f);
+		var opt = flightService.findById(id);
+		if (opt.isEmpty()) return "redirect:/flights";
+
+		model.addAttribute("flight", opt.get());
+
 //		model.addAttribute("departureMap", DateUtils.formatForDisplay(f.getDepartureTime()));
 //		model.addAttribute("arrivalMap", DateUtils.formatForDisplay(f.getArrivalTime()));
 		return "flightDetails";
